--- a/Fast_Report_API/appsettings.json
+++ b/Fast_Report_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;User ID=root;Password=123123;Database=pgh"
+  },
   "AllowedHosts": "*"
 }
