--- a/Fast_Report_API/appsettings.json
+++ b/Fast_Report_API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;User ID=root;Password=123123;Database=pgh"
+    "Default": "Server=localhost;User ID=root;Password=;Database=pgh"
   },
   "AllowedHosts": "*"
 }
